auto_branch_pushes/sungbin/custom-data/ppluto-main/overlays/dev/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false
    alb.ingress.kubernetes.io/group.name: ppluto-main # the same group belongs to the same ALB (https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#group.name)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # http 80 port redirects to https 443
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:912892869657:certificate/7cad03f5-41d0-41a7-9a3a-f77e58b77de0,arn:aws:acm:ap-northeast-2:912892869657:certificate/9c24bb1c-9247-4291-9a87-d181f49f9034,arn:aws:acm:ap-northeast-2:912892869657:certificate/5b2afc86-2c8e-4a7c-ba38-29281a1f04eb,arn:aws:acm:ap-northeast-2:912892869657:certificate/b4477296-a40a-43a0-89c6-5b42dd09c962,arn:aws:acm:ap-northeast-2:912892869657:certificate/64171bbd-a8af-42f4-b7cf-add40d948b31,arn:aws: [...]
    alb.ingress.kubernetes.io/subnets: subnet-0e702042fef1214b0,subnet-0e2d06adbcc8e5ea0,subnet-0b5971ee8ec80ecd7 # same vpc subnetes in the k8s cluster
    alb.ingress.kubernetes.io/idle-timeout: "300" # idle timeout for ALB (TODO: reset to 60 and handle the long latency connection in the other way)
spec:
  rules:
    # tickerbell.ai
    - host: sungbin--custom-data---tickerbell.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # wallstreet-now.com
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--custom-data---wallstreetnow.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # supernews.io
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--custom-data---supernews.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # wallstreetnow.co
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--custom-data---wallstreetnow-co.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # super.news
    # NOTE: Keep in sync with `tickerbell.ai` section above.
    - host: sungbin--custom-data---super-news.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # supersearchx.com
    - host: sungbin--custom-data---supersearchx.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /wsrvProxy
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-misc-service
                port:
                  number: 5088
          - path: /rss
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /sitemap
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 83
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 80

    # projectpluto.co (Company website)
    - host: sungbin--custom-data---projectpluto.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 8004
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84

    # terminal.supersearchx.com
    - host: sungbin--custom-data---terminal-supersearchx-com.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 8005
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
          - path: /api-dk
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 84

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress-for-sticky"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true # enable sticky session for gaia only
    alb.ingress.kubernetes.io/group.name: ppluto-main # the same group belongs to the same ALB (https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/#group.name)
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443" # http 80 port redirects to https 443
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:912892869657:certificate/7cad03f5-41d0-41a7-9a3a-f77e58b77de0,arn:aws:acm:ap-northeast-2:912892869657:certificate/9c24bb1c-9247-4291-9a87-d181f49f9034,arn:aws:acm:ap-northeast-2:912892869657:certificate/5b2afc86-2c8e-4a7c-ba38-29281a1f04eb,arn:aws:acm:ap-northeast-2:912892869657:certificate/b4477296-a40a-43a0-89c6-5b42dd09c962,arn:aws:acm:ap-northeast-2:912892869657:certificate/64171bbd-a8af-42f4-b7cf-add40d948b31,arn:aws: [...]
    alb.ingress.kubernetes.io/subnets: subnet-0e702042fef1214b0,subnet-0e2d06adbcc8e5ea0,subnet-0b5971ee8ec80ecd7 # same vpc subnetes in the k8s cluster
    alb.ingress.kubernetes.io/idle-timeout: "300" # idle timeout for ALB (TODO: reset to 60 and handle the long latency connection in the other way)
spec:
  rules:
    # openembedding.com (Project Gaia)
    - host: sungbin--custom-data---gaia.auto-branch-pushes.ppluto-main.ppluto.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 8003
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ppluto-main-service-active
                port:
                  number: 82
